Phase 5.5: Test consolidation + final docs (Phase 5 code-complete)
Round out test coverage and update all docs to reflect Phase 5 done.

Tests:
- dao/UserDaoTest (7 H2 tests): insert + findByUsername, update without
  password keeps existing hash, update with password switches hash,
  updateLastLogin sets timestamp, setEnabled toggle, delete, findAll.
- Test totals: 62 @Test methods (≥10 target, 6.2x).
  Coverage matrix:
    DAO H2 integration:  User 7 + Region 6 + AlertRule 5 + Views 6 = 24
    Service Mockito:     Auth 6 + Region 4 + AlertRule 3 + User 5 +
                         Dashboard 4 = 22
    Util pure unit:      PasswordUtil 5 + SessionManager 6 + Validator 5 = 16

Docs:
- desktop-admin/README.md: status badge → "Phase 5 code-complete",
  design pattern table (Singleton/DAO/MVC/Strategy/Composite/Factory),
  full directory tree with test counts per file, roadmap table 5.0-5.5
  with commit hashes.
- README.md (root): badge → Phase 5 code-complete + JavaFX 17.0.10 LTS,
  desktop UI row in stack table, new Phase 5 section with 5-screen
  table + design patterns checklist + 3 quick commands.
- docs/PROGRESS.md: phase tracking rows 5.1-5.5 set 🟡 with detail,
  appended 5 new sections (Phase 5.1 through 5.5) with mục tiêu /
  action log / verification snapshot / next.
- UPGRADE_PLAN.md §24.5 Phase 5 row: rewritten to reflect actual
  implementation (JavaFX 17.0.10 not 21, no module-info.java, 62 tests
  not "≥10"), commit chain, pitfalls handled list.

Phase 5 STATE: code-complete + lint clean + 6/6 FXML parse OK + 62 tests
ready to run (defer mvn until proxy resolved). 5 sequential commits:
5.1 08a97bd → 5.2 de7c4dd → 5.3 7ced8e0 → 5.4 8caec9e → 5.5 (this).

Co-authored-by: Cursor <cursoragent@cursor.com>